# logic-expression-generator

./: .gitignore  Cargo.toml  expressions.json  pyproject.toml  random_expression.notpy  wrapper.py
latex/: examples.tex
leg_fs/: Cargo.toml
leg_fs/src/: main.rs
src/: jls.rs  lib.rs
