[workspace]
members = ["leg_fs"]

[lib]
name = "logic_expression_generator"
crate-type = ["cdylib", "lib"]

[package]
name = "logic-expression-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
# pyo3 = { version = "0.28.2", features = ["abi3-py38"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
zip = "8.1.0"
